# walk4change

./: .gitignore  index.html  landing.html  privacy.html  regulamin.html  vercel.json
.github/workflows/: docker.yml  ratelimit-probe.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  error.rs  lib.rs  mail.rs  main.rs  response.rs  seed.rs  state.rs
backend/crates/api/src/auth/: extractor.rs  handlers.rs  jwt.rs  mod.rs  password.rs
backend/crates/api/src/models/: mod.rs
backend/crates/api/src/repo/: block.rs  friend.rs  gdpr.rs  magic.rs  message.rs  mod.rs  rating.rs  reward.rs  user.rs  verify.rs  walk.rs
backend/crates/api/src/routes/: blocks.rs  eco.rs  friends.rs  leaderboard.rs  messages.rs  mod.rs  profile.rs  ratings.rs  rewards.rs  stats.rs  walks.rs
backend/crates/api/src/scoring/: config.rs  engine.rs  repo.rs
backend/crates/api/src/util/: mod.rs  pagination.rs  ratelimit.rs  validate.rs
backend/crates/api/src/ws/: handler.rs  hub.rs  mod.rs  protocol.rs
backend/crates/api/tests/: auth_test.rs  db_test.rs  e2e_dynamic_membership_test.rs  e2e_journey_test.rs  friends_test.rs  hardening_test.rs  health_test.rs  leaderboard_test.rs  profile_test.rs  register_login_test.rs  replay_smoke_test.rs  rewards_test.rs  scoring_test.rs  seed_test.rs  walks_test.rs  ws_test.rs
backend/crates/api/tests/common/: mod.rs
backend/crates/replay/: Cargo.toml
backend/crates/replay/src/: main.rs
backend/deploy/: .env.deploy.example  .env.homelab.example  add-nature-zone.sh  cloudrun.sh  homelab.sh
backend/fixtures/: track_a.json  track_b.json
backend/migrations/: 0001_init.sql  0002_hardening.sql  0003_magic_links.sql  0004_eco_reports.sql  0006_feed_social.sql  0007_rls_social.sql  0008_chat_indexes.sql  0009_blocks_kick.sql  0010_walk_ratings.sql  0011_email_verification.sql  0012_gdpr.sql
backend/scripts/: demo.sh  dev-down.sh  dev-up.sh  replay.sh  seed.sh
docs/: HANDOFF.pl.md
docs/superpowers/plans/: 2026-06-27-walk4change-backend.md
docs/superpowers/specs/: 2026-06-27-walk4change-backend-design.md
scripts/: build-site.sh
walk4change/backend/: Cargo.toml  docker-compose.yml
web/: .env.example  index.html  package-lock.json  package.json
web/public/: manifest.webmanifest  sw.js
web/scripts/: dev.sh
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AppShell.tsx  BottomNav.tsx  (+13 more)
(+37 files in other folders)
