[package]
name = "walk4change-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "walk4change_api"
path = "src/lib.rs"

[[bin]]
name = "walk4change-api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
lettre.workspace = true
futures-util = "0.3"

[dev-dependencies]
tower.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
